--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -132,7 +132,9 @@
           it('should return a promise that gets rejected on no-match', (done) => {
             const result = router.render('/path/not/defined');
             result
-              .then(() => fail('the promise should have been rejected'))
+              .then(() => {
+                throw new Error('the promise should have been rejected');
+              })
               .catch(() => done());
           });
 
@@ -192,6 +194,88 @@
             ]);
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+        });
+
+        describe('router.ready', () => {
+          let router;
+          beforeEach(() => {
+            router = new Vaadin.Router(outlet);
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should be a promise', () => {
+            expect(router).to.have.property('ready')
+              .that.is.a('promise');
+          });
+
+          it('(render in progress / ok) should get fulfilled after the render is completed', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            router.render('/');
+            await router.ready.then((outlet) => {
+              expect(outlet.children).to.have.lengthOf(1);
+              expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+            });
+          });
+
+          it('(render in progress / error) should get rejected with the current render error', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            router.render('non-existent-path');
+            await router.ready.then(() => {
+              throw new Error('the `ready` promise should have been rejected');
+            }).catch((error) => {
+              expect(outlet.children).to.have.lengthOf(0);
+              expect(error).to.be.an('error');
+              expect(error).to.have.property('code', 404);
+              expect(error).to.have.property('message')
+                .that.matches(/non-existent-path/);
+            });
+          });
+
+          it('(render completed / ok) should get fulfilled with the last render result', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('/').then(() => {
+              return router.ready.then((outlet) => {
+                expect(outlet.children).to.have.lengthOf(1);
+                expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+              });
+            });
+          });
+
+          it('(render completed / error) should get rejected with the last render error', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('non-existent-path').catch(() => {
+              return router.ready.then((outlet) => {
+                throw new Error('the `ready` promise should have been rejected');
+              }).catch((error) => {
+                expect(error).to.be.an('error');
+                expect(error).to.have.property('code', 404);
+                expect(error).to.have.property('message')
+                  .that.matches(/non-existent-path/);
+              });
+            });
+          });
+
+          it('(no renders yet) should get fulfilled before the first render completes', async() => {
+            const sequence = [];
+            const p1 = router.ready.then(() => {
+              expect(outlet.children).to.have.lengthOf(0);
+              sequence.push('no render yet');
+            });
+
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            const p2 = router.render('/').then(() => {
+              expect(outlet.children).to.have.lengthOf(1);
+              sequence.push('first render done');
+            });
+            
+            await Promise.all([p1, p2]).then(() => {
+              expect(sequence[0]).to.equal('no render yet');
+              expect(sequence[1]).to.equal('first render done');
+            });
           });
         });
 
