--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -28,34 +28,88 @@
       });
 
       describe('JS API (basic functionality)', () => {
-        it('should have a no-arg constructor', () => {
-          const router = new Vaadin.Router();
-          expect(router).to.be.ok;
+        describe('new Router(outlet?, options?)', () => {
+          it('should work without arguments', () => {
+            const router = new Vaadin.Router();
+            expect(router).to.be.ok;
+          });
+
+          it('should accept a router outlet DOM Node as the 1st argument', () => {
+            const router = new Vaadin.Router(outlet);
+            const actual = router.getOutlet();
+            expect(actual).to.equal(outlet);
+          });
+
+          it('should throw if the router outlet is truthy but is not valid a DOM Node', () => {
+            [
+              true,
+              42,
+              '<slot></slot>',
+              {},
+              [document.body],
+              () => document.body
+            ].forEach(arg => {
+              expect(() => new Vaadin.Router(arg), `${arg}`).to.throw(TypeError);
+            });
+          });
+
+          it('should accept an options object as the 2nd argument', () => {
+            const router = new Vaadin.Router(null, {baseUrl: '/users'});
+            expect(router).to.have.property('baseUrl', '/users');
+          });
         });
 
-        it('should have a 1-arg constructor (outlet DOM Node)', () => {
-          const router = new Vaadin.Router(outlet);
-          expect(router).to.be.ok;
-        });
+        describe('router.render(pathname)', () => {
+          const add100msDelay = () => {
+            return new Promise((resolve, reject) => {
+              setTimeout(() => resolve(), 100);
+            });
+          }
 
-        it('should have a 2-args constructor (outlet DOM Node, options)', () => {
-          const router = new Vaadin.Router(outlet, {baseUrl: '/users'});
-          expect(router).to.be.ok;
-        });
-
-        it('should have a setter for the routes config', () => {
-          const router = new Vaadin.Router();
-          router.setRoutes([
-            {path: '/', component: 'x-home-view'},
-            {path: '/users', component: 'x-users-view'}
-          ]);
-          expect(router).to.be.ok;
-        });
-
-        describe('render()', () => {
           let router;
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should throw if the router outlet is not a valid DOM Node (on start)', () => {
+            [
+              undefined,
+              null,
+              0,
+              false,
+              '',
+              NaN
+            ].forEach(invalidOutlet => {
+              router.setOutlet(invalidOutlet);
+              expect(() => router.render('/'), `${invalidOutlet}`).to.throw(TypeError);
+            });
+          });
+
+          it('should throw if the router outlet is a not valid DOM Node (on finish)', async () => {
+            await Promise.all([
+              undefined,
+              null,
+              0,
+              false,
+              '',
+              NaN
+            ].map(async (invalidOutlet) => {
+              const router = new Vaadin.Router(outlet);
+              router.setRoutes([{path: '/', component: 'x-home-view'}]);
+              const fulfilled = sinon.spy();
+              const rejected = sinon.spy();
+              const ready = router.render('/').then(fulfilled).catch(rejected);
+              router.setOutlet(invalidOutlet);
+              await ready;
+              expect(fulfilled).to.not.have.been.called;
+              expect(rejected).to.have.been.called.once;
+              expect(rejected.args[0][0]).to.be.instanceof(TypeError);
+              router.unsubscribe();
+            }));
           });
           
           it('should return a promise that resolves to the router outlet DOM element', async () => {
@@ -76,12 +130,12 @@
           });
 
           it('should return a promise that gets rejected on no-match', (done) => {
-            router.setRoutes();
-            const result = router.render('/');
-            result.then(() => {
-              fail('the render() promise should get rejected');
-            })
-            .catch(() => done());
+            const result = router.render('/path/not/defined');
+            result
+              .then(() => {
+                throw new Error('the promise should have been rejected');
+              })
+              .catch(() => done());
           });
 
           it('should create and append a route `component` into the router outlet', async () => {
@@ -102,34 +156,191 @@
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
           });
 
-          it('should use exact matching by default', async () => {
-            router.setRoutes([{path: '/users', component: 'x-users-view'}]);
-            let error;
-            try {
-              await router.render('/users/and/some/more/segments');
-            } catch (e) {
-              error = e;
-            }
-            expect(error).to.be.instanceOf(Error);
+          it('should remove any pre-existing content of the router outlet on no-match', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('/');
+
+            await router.render('/path/not/defined').catch(() => {});
             expect(outlet.children).to.have.lengthOf(0);
           });
 
-          it('should use prefix matching if a route has a truthy `children` property', async () => {
-            router.setRoutes([{path: '/users', children: true, component: 'x-users-view'}]);
-            await router.render('/users/and/some/more/segments');
-            expect(outlet.children[0].tagName).to.match(/x-users-view/i);
+          it('should ignore a successful result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/slow', action: add100msDelay, children: [
+                {path: '/users', component: 'x-users-view'},
+              ]},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await Promise.all([
+              router.render('/slow/users'), // start the first resolve pass
+              router.render('/admin'), // start the second resolve pass before the first is completed
+            ]);
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
           });
 
-          it('hould use prefix matching if a route has a falsey `children` property', async () => {
-            router.setRoutes([{path: '/users', children: null, component: 'x-users-view'}]);
-            let error;
-            try {
-              await router.render('/users/and/some/more/segments');
-            } catch (e) {
-              error = e;
-            }
-            expect(error).to.be.instanceOf(Error);
-            expect(outlet.children).to.have.lengthOf(0);
+          it('should ignore an error result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/slow', action: add100msDelay, children: [
+                {path: '/users', component: 'x-users-view'},
+              ]},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await Promise.all([
+              router.render('/slow/non-existent').catch(() => {}), // start the first resolve pass
+              router.render('/admin'), // start the second resolve pass before the first is completed
+            ]);
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+        });
+
+        describe('router.ready', () => {
+          let router;
+          beforeEach(() => {
+            router = new Vaadin.Router(outlet);
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should be a promise', () => {
+            expect(router).to.have.property('ready')
+              .that.is.a('promise');
+          });
+
+          it('(render in progress / ok) should get fulfilled after the render is completed', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            router.render('/');
+            await router.ready.then((outlet) => {
+              expect(outlet.children).to.have.lengthOf(1);
+              expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+            });
+          });
+
+          it('(render in progress / error) should get rejected with the current render error', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            router.render('non-existent-path');
+            await router.ready.then(() => {
+              throw new Error('the `ready` promise should have been rejected');
+            }).catch((error) => {
+              expect(outlet.children).to.have.lengthOf(0);
+              expect(error).to.be.an('error');
+              expect(error).to.have.property('code', 404);
+              expect(error).to.have.property('message')
+                .that.matches(/non-existent-path/);
+            });
+          });
+
+          it('(render completed / ok) should get fulfilled with the last render result', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('/').then(() => {
+              return router.ready.then((outlet) => {
+                expect(outlet.children).to.have.lengthOf(1);
+                expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+              });
+            });
+          });
+
+          it('(render completed / error) should get rejected with the last render error', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('non-existent-path').catch(() => {
+              return router.ready.then((outlet) => {
+                throw new Error('the `ready` promise should have been rejected');
+              }).catch((error) => {
+                expect(error).to.be.an('error');
+                expect(error).to.have.property('code', 404);
+                expect(error).to.have.property('message')
+                  .that.matches(/non-existent-path/);
+              });
+            });
+          });
+
+          it('(no renders yet) should get fulfilled before the first render completes', async() => {
+            const sequence = [];
+            const p1 = router.ready.then(() => {
+              expect(outlet.children).to.have.lengthOf(0);
+              sequence.push('no render yet');
+            });
+
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            const p2 = router.render('/').then(() => {
+              expect(outlet.children).to.have.lengthOf(1);
+              sequence.push('first render done');
+            });
+            
+            await Promise.all([p1, p2]).then(() => {
+              expect(sequence[0]).to.equal('no render yet');
+              expect(sequence[1]).to.equal('first render done');
+            });
+          });
+        });
+
+        describe('navigation events', () => {
+          let router;
+          beforeEach(async() => {
+            router = new Vaadin.Router(outlet);
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await router.render('/admin');
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should automatically subscribe to popstate events when created', async() => {
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should handle popstate events as navigation triggers', async() => {
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should unsubscribe from popstate events after an `unsubscribe()` method call', async() => {
+            router.unsubscribe();
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+
+          it('should subscribe to popstate events after a `subscribe()` method call', async() => {
+            router.unsubscribe();
+            router.subscribe();
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should handle updates to the routes config as navigation triggers', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should ignore navigation events if no routes are set', async() => {
+            router.setRoutes([]);
+            await router.ready;
+
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            const fulfilled = sinon.spy();
+            const rejected = sinon.spy();
+            await router.ready.then(fulfilled).catch(rejected);
+            expect(rejected).to.not.have.been.called;
           });
         });
       });
