add unit tests for navigation triggers
 - except the CLICK trigger (which is not implemented yet)

--- a/core/test/index.coverage.html
+++ b/core/test/index.coverage.html
@@ -19,6 +19,10 @@
   <script src="../dist/test-iife/resolver/matchRoute.js"></script>
   <script src="../dist/test-iife/resolver/resolver.js"></script>
   <script src="../dist/test-iife/resolver/generateUrls.js"></script>
+  <script src="../dist/test-iife/triggers/triggerNavigation.js"></script>
+  <script src="../dist/test-iife/triggers/setNavigationTriggers.js"></script>
+  <script src="../dist/test-iife/triggers/popstate.js"></script>
+  <script src="../dist/test-iife/triggers/click.js"></script>
 </head>
 
 <body>
