add demos for Navigation Triggers
 - a demo for the POPSTATE navigation trigger
 - a demo for the CLICK navigation trigger
 - a demo for subscribing and unsubscribing from navigation events

 + configure rollup to create a separate UMD bundle for the click navigation trigger (not included into the default Vaadin Router core UMD bundle)

--- a/core/test/triggers/click.spec.html
+++ b/core/test/triggers/click.spec.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>vaadin-router-core tests</title>
   <script src="../../../web-component-tester/browser.js"></script>
-  <script src="../../dist/test-iife/triggers/triggerNavigation.js"></script>
-  <script src="../../dist/test-iife/triggers/click.js"></script>
+  <script src="../../dist/umd/click-navigation-trigger.js"></script>
 
   <base href="/">
 </head>
@@ -297,6 +296,6 @@
           });
         });
       });
-    })(VaadinTestNamespace);
+    })(window.VaadinTestNamespace || window.Vaadin.Router.NavigationTrigger);
   </script>
 </body>
