Update npm dependencies, drop yarn. Drop bower from core

--- a/core/test/index.coverage.html
+++ b/core/test/index.coverage.html
@@ -6,12 +6,8 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>vaadin-router-core tests</title>
 
-  <!--
-    At the time of creating this component WCT still had issues using browser.js
-    from its NPM package (browser.js from WCT's Bower package worked fine).
-    This is the only reason to use Bower for the vaadin-router-core package.
-  -->
-  <script src="../bower_components/web-component-tester/browser.js"></script>
+  <script src="../node_modules/wct-browser-legacy/browser.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script src="test-suites.js"></script>
 
   <script src="../dist/test-iife/resolver/path-to-regexp.js"></script>
@@ -30,7 +26,6 @@
   <script>
     (function() {
       "use strict";
-      WCT._config.environmentScripts.push('webcomponentsjs/webcomponents-lite.js');
 
       WCT.loadSuites(
         window.VaadinRouterCoreSuites.coverage
