Restore bower in core to make demos work again

--- a/core/test/index.html
+++ b/core/test/index.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>vaadin-router-core tests</title>
 
-  <script src="../node_modules/wct-browser-legacy/browser.js"></script>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <!--
+    We can use npm package in tests, but in the demos we still need HTML Imports support.
+    This is the only reason to use Bower for the vaadin-router-core package.
+  -->
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="test-suites.js"></script>
   <script src="../dist/umd/vaadin-router-core.js"></script>
 </head>
