Minor demos fixes

--- a/demo/core-basic-demos.html
+++ b/demo/core-basic-demos.html
@@ -24,7 +24,7 @@
 
     <h3>Basic</h3>
     <p>Vaadin.Router needs an outlet (a DOM Node to render into), and a routes
-      config. Once created, it automatically subscribes to `popstate` events on
+      config. Once created, it automatically subscribes to <code>popstate</code> events on
       the <code>window</code> and updates the rendered component every time
       either the location or the routes config changes.</p>
     <p>The routes config maps paths to Web Components. Vaadin.Router goes
@@ -87,7 +87,7 @@
     <p>Named parameters are bound to route component properties. Unnamed
       parameters are accessible by index through the <code>route.params</code>
       array. (the <code>route</code> property is set on the route component by
-      the router.</p>
+      the router).</p>
     <vaadin-demo-snippet id="core-basic-examples-3" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
