add fallback routes demo
 + add a `pathname` property to the `route` object passed to view components - it contains the matched pathname

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -18,3 +18,4 @@
 <link rel="import" href="demo-elements/x-user-profile.html">
 <link rel="import" href="demo-elements/x-not-found-view.html">
 <link rel="import" href="demo-elements/x-profile-view.html">
+<link rel="import" href="demo-elements/x-user-not-found-view.html">
