--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -12,6 +12,9 @@
 <script src="../core/dist/umd/click-navigation-trigger.js"></script>
 
 <link rel="import" href="demo-elements/x-home-view.html">
+<link rel="import" href="demo-elements/x-image-view.html">
+<link rel="import" href="demo-elements/x-knowledge-base.html">
 <link rel="import" href="demo-elements/x-user-list.html">
 <link rel="import" href="demo-elements/x-user-profile.html">
 <link rel="import" href="demo-elements/x-not-found-view.html">
+<link rel="import" href="demo-elements/x-profile-view.html">
