--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -54,6 +54,11 @@
             });
           });
 
+          it('route should throw when created with both `action` and `component`', () => {
+            const router = new Vaadin.Router(outlet);
+            expect(() => router.setRoutes([{path: '/', component: 'x-home-view', action: () => {}}])).to.throw(Error);
+          });
+
           it('should accept an options object as the 2nd argument', () => {
             const router = new Vaadin.Router(null, {baseUrl: '/users'});
             expect(router).to.have.property('baseUrl', '/users');
